2011-07-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	pthread_mutex_unlock where it is unblocking threads with preemption.
	* psxtmmutex06/.cvsignore, psxtmmutex06/Makefile.am,
	psxtmmutex06/init.c, psxtmmutex06/psxtmmutex06.doc: New files.

2011-07-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtmmutex05/init.c: Fix test. Pattern was wrong.

2011-07-20	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, configure.ac: Add benchmark of pthread_mutex_unlock
	where it is unblocking threads without preemption.
	* psxtmmutex05/.cvsignore, psxtmmutex05/Makefile.am,
	psxtmmutex05/init.c, psxtmmutex05/psxtmmutex05.doc: New files.

2011-07-20	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1843/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of key
	create and delete.
	* psxtmkey01/.cvsignore, psxtmkey01/Makefile.am, psxtmkey01/init.c,
	psxtmkey01/psxtmkey01.doc: New files.

2011-07-19	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1840/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of key
	set and get.
	* psxtmkey02/.cvsignore, psxtmkey02/Makefile.am, psxtmkey02/init.c,
	psxtmkey02/psxtmkey02.doc: New files.

2011-07-18	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* configure.ac: Remove psxtmmutex04 until PR 1836 is processed.

2011-07-15	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1835/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	mutex set and get priority ceiling.
	* psxtmmutex07/.cvsignore, psxtmmutex07/Makefile.am,
	psxtmmutex07/init.c, psxtmmutex07/psxtmmutex07.doc: New files.

2011-07-13	Joel Sherrill <joel.sherrill@oarcorp.com>

	* psxtmtests_plan.csv: Update to reflect next activities.

2011-07-13	Ricardo Aguirre <el.mastin@ymail.com>

	PR 1831/tests
	* Makefile.am, configure.ac, psxtmtests_plan.csv: Add benchmark of
	mutex init and destroy.
	* psxtmmutex01/.cvsignore, psxtmmutex01/Makefile.am,